<resources>
    <string name="app_name">盘点机</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="wrong_version">wrong version</string>
    <string name="setting_adduser_btn_text">账号添加</string>
    <string name="setting_revise_btn_text">修改密码</string>
    <string name="setting_resetdata_btn_text">数据初始化</string>
    <string name="setting_changeuser_btn_text">切换用户</string>
    <string name="setting_printer_btn_text">打印</string>
    <string name="action_settings">Settings</string>
    <string name="has_paired">已配对</string>
    <string name="scanning">扫描设备中…</string>
    <string-array name="interface_type">
        <item>Bluetooth</item>
        <item>USB</item>
        <item>Wifi</item>
        <item>Serial port</item>
    </string-array>
    <string name="help">1.输入打印机名称--&amp;gt;打开(只能打开已配对的设备)\n
    					2.菜单--&amp;gt;打开连接(可打开已配对设备与新设备)</string>
        <string name="input_printer_name">打印机名称</string>
        <string name="not_connected">请先连接蓝牙打印机（菜单-&amp;gt;连接）</string>
        <string name="bt_not_enabled">蓝牙没有启动</string>
        <string name="bt_has_on">蓝牙已打开</string>
        <string name="bt_has_off">蓝牙已关闭</string>
        <string name="bt_print_success">打印成功</string>
        <string name="bt_print_failed">打印失败</string>
        <string name="bt_connecting">正在连接..</string>
        <string name="bt_connect_success">连接成功..</string>
        <string name="bt_connect_failed">连接失败</string>
        <string name="bt_connect_closed">连接已关闭</string>
        <string name="title_connecting">正在连接…</string>
        <string name="title_connected">已连接</string>
        <string name="title_not_connected">未连接</string>
        <string name="select_device">请选择要连接的设备</string>
        <string name="none_paired">没有匹配的设备</string>
        <string name="not_paired">未配对</string>
        <string name="rePaire_connect">重新配对并连接</string>
        <string name="unpair">取消配对</string>
        <string name="paire_connect">配对并连接</string>
        <string name="connect_paired">连接</string>
        <string name="select_options">选择操作</string>
        <string name="none_found">没有找到设备</string>
        <string name="no_bounded_device">未找到名称以 %s 开头的设备</string>
        <string name="title_paired_devices">已配对的设备</string>
        <string name="title_other_devices">其它可用设备</string>
        <string name="button_scan">扫描新设备</string>
        <string name="connect">打开连接</string>
        <string name="disconnect">断开连接</string>
        <string name="edit_hint">打印机名称(如T9)</string>
        <string name="print_text">打印文本</string>
        <string name="print_table">打印表格</string>
        <string name="print_image">打印图片</string>
        <string name="print_custom_image">打印自定义图形</string>
        <string name="print_note">打印小票</string>
        <string name="print_title">打印标题</string>
        <string name="bar_code_hint">输入条码，例如:No.123456</string>
        <string name="print_bar_code">打印条码</string>
        <string name="open_file">打开文件</string>
        <string name="save_file">保存文件</string>
        <string name="save_as_file">另存文件</string>
        <string name="print_file">打印文件</string>
        <string name="save_ok">确定</string>
        <string name="save_cancel">取消</string>
        <string name="toast_input_name">请输入文件名!</string>
        <string name="toast_save_null">请勿保存空文件!</string>
        <string name="toast_print_null">请勿打印空文件!</string>
        <string name="toast_save_success">保存成功!</string>
        <string name="input_file_name">请输入文件名称:</string>
        <string name="back_to_root">返回根目录…</string>
        <string name="back_to_pre">返回上一级…</string>
        <string name="file_manager">文件管理</string>
        <string name="editText_print">文本打印</string>
    <string name="example_text">Android-SDK 是提供给用户在Android系统下进行二次开发的软件开发工具包。
该软件开发工具包采用蓝牙通信协议，
适合于具有蓝牙接口的Android只能设备开发应用程序使用，
如HTC、Motorola、Samsung 等品牌的手机和Android 系统的平板电脑。
该软件开发工具包是基于ESC/POS 命令标准，
具有蓝牙功能的打印机都适合作为本系统的打印设备，
典型的应用是蓝牙手机+便携打印机构成移动打印终端，广泛应用在具有移动打印需求的领域。</string>
        <string name="company_name">打印机公司</string>
        <string name="shop_company_title">宁波月湖店</string>
        <string name="shop_num">门店号：</string>
        <string name="shop_note_num">单据号：</string>
        <string name="shop_cashier_num">收银员：</string>
        <string name="shop_receipt_date">单据日期：</string>
        <string name="shop_print_time">打印时间：</string>
        <string name="shop_goods_number">数量：</string>
        <string name="shop_goods_total_price">总计：</string>
        <string name="shop_payment">付款：</string>
        <string name="shop_change">找零：</string>
        <string name="shop_company_name">公司名称：江苏某某家居用品有限公司</string>
        <string name="shop_company_site">公司网址：</string>
        <string name="shop_company_address">地址：江苏省宁波市某某路某某号</string>
        <string name="shop_company_tel">电话：</string>
        <string name="shop_Service_Line">服务专线：</string>
        <string name="shop_thanks">谢谢惠顾,欢迎再次光临！</string>
        <string name="shop_demo">Demo 版本！</string>
        <string name="note_title">品名;数量;单价;金额</string>
        <string name="coffee">咖啡</string>
        <string name="tableware">消毒餐具</string>
        <string name="peanuts">油炸花生米</string>
        <string name="cucumber">蒜泥黄瓜</string>
        <string name="frog">干锅田鸡</string>
        <string name="rice">米饭</string>
        <string name="company_sub_title">专注，可靠，中国特种打印机优秀品牌</string>
        <string name="bags">保鲜袋</string>
        <string name="umbrella">雨伞</string>
        <string name="hook">铁丝挂钩</string>
        <string name="choose_barcode_type">条码类型:</string>
        <string name="choose_paper_width">纸张宽度:</string>
        <string name="choose_printer_type">打印机类型:</string>
        <string name="choose_Encoding">编码方式:</string>
        <string name="printer_type_remin">热敏</string>
        <string name="printer_type_styuls">针打</string>
        <string name="usb">usb</string>
        <string name="bluetooth">bluetooth</string>
        <string name="wifi">wifi</string>
        <string name="shop_receipt_num">单据</string>
        <string name="print_codepage">打印代码页</string>
        <string name="print_biaoqian">打印标签</string>
        <string name="btn_help">开发帮助</string>
        <string name="btn_exit">退出应用</string>
        <string name="button_back">返回</string>
        <string name="codepage">请选择代码页类型：</string>
        <string name="button_connect_principle">连接原理说明</string>
        <string name="button_print_principle">打印原理说明</string>
        <string name="button_recon_listen">蓝牙自动回连</string>
        <string name="button_discon_listen">蓝牙断线监测</string>
        <string name="button_address_bouds">蓝牙快速连接</string>
        <string-array name="barcode2">
            <item>PDF417</item>
            <item>QRCODE</item>
            <item>DATAMATRIX</item>
            <item>全选</item>
        </string-array>
        <string-array name="barcode1">
            <item>CODE39</item>
            <item>CODEBAR</item>
            <item>ITF</item>
            <item>CODE93</item>
            <item>CODE128</item>
            <item>UPC-A</item>
            <item>UPC-E</item>
            <item>EAN13</item>
            <item>EAN8</item>
            <item>全选</item>
        </string-array>
        <string name="no_conn_address">地址：未连接</string>
        <string name="no_conn_name">名称：未连接</string>
        <string name="str_address">地址：</string>
        <string name="str_name">名称：</string>
        <string name="str_message">提示：</string>
        <string name="str_connlast">是否连接蓝牙设备?</string>
        <string name="yesconn">确认连接</string>
        <string name="str_resel">搜索设备</string>
        <string name="str_wifi_now">当前连接的wifi是：</string>
        <string name="str_wifi_no">尚未连接到任何wifi网络</string>
        <string name="print">打印</string>
        <string name="conn_failed">连接失败</string>
        <string name="conn_closed">连接关闭</string>
        <string name="conn_no">没有可连接的设备</string>
        <string name="password">请输入密码：</string>
        <string name="cancel">取消</string>
        <string name="barcode">请选择条码类型：</string>
        <string name="str_image">打印图片效果展示：</string>
        <string name="str_canvas">打印画布效果展示：</string>
        <string name="str_file">打印文件效果展示：</string>
        <string name="str_label">打印标签效果展示：</string>
        <string name="str_text">打印文本效果展示：</string>
        <string name="str_text_left">文字居左效果演示abc123：</string>
        <string name="str_text_right">文字居右效果演示abc123：</string>
        <string name="str_text_center">文字居中效果演示abc123：</string>
        <string name="str_text_strong">文字加粗效果演示abc123：</string>
        <string name="str_text_underline">文字下划线效果演示abc123：</string>
        <string name="str_text_height">同行不同高效果演示：：</string>
        <string name="str_note">打印小票效果演示：</string>
        <string name="str_show">演示：</string>
        <string name="note_label">此项功能仅支持标签打印机。</string>
        <string name="times">倍</string>
        <string name="bigger">放大</string>
        <string name="bigger1">倍效果演示abc123</string>
    <string name="connecting">连接中</string>
    <string name="please_wait">请稍候</string>
    <string name="import_path">/sdcard/CountingMachine/import</string>
    <string name="export_path">/sdcard/CountingMachine/export</string>
    <string name="export_path_">/sdcard/CountingMachine/export/</string>
    <string name="txt">.txt</string>
    <string name="rb_search">搜索</string>
    <string name="rb_add">添加</string>
    <string name="btn_sure">确认</string>
    <string name="tv_checklist">盘点单:</string>
    <string name="b22">B22</string>
    <string name="tv_detail">明细:</string>
    <string name="_1">1</string>
    <string name="tv_count">数量:</string>
    <string name="_0">0</string>
    <string name="btn_sure_change">确认修改</string>
    <string name="tv_check_goods">盘点商品</string>
    <string name="tv_add_floor">添加货层</string>
    <string name="et_imput_scan">扫描或输入货号</string>
    <string name="tv_search_c">查找</string>
    <string name="tv_save">保存</string>
    <string name="tv_counts">数量:</string>
    <string name="btn_new_list">新建表单</string>
    <string name="_12">12</string>
    <string name="tv_open_content">打开连接</string>
    <string name="tv_time">时间</string>
    <string name="tv_detele">删</string>
    <string name="tv_goods_name">商品名称</string>
    <string name="_000000000000">000000000000</string>
    <string name="_10">10</string>
    <string name="tv_sub_jian">－</string>
    <string name="tv_add_jia">＋</string>
    <string name="tv_return">返回</string>
    <string name="tv_goods">商品</string>
    <string name="tv_load">加 载</string>
    <string name="tv_import">导 入</string>
    <string name="tv_count_g">品数</string>
    <string name="tv_goods_names">商品名称</string>
    <string name="tv_goods_number">货号</string>
    <string name="tv_goods_number_">货 号:</string>
    <string name="_1234567890">1234567890</string>
    <string name="tv_goods_name_">品 名:</string>
    <string name="tv_one_two_three">一二三</string>
    <string name="tv_price">零售价:</string>
    <string name="btn_return">返回</string>
    <string name="tv_user_name">用 户 名</string>
    <string name="tv_pass_word">密 码</string>
    <string name="tv_sure_pswd">确认密码</string>
    <string name="btn_update">提交</string>
    <string name="btn_return_s">返回</string>
    <string name="tv_user_now">当前用户名</string>
    <string name="admin_">admin</string>
    <string name="tv_old_pswd">原 密 码</string>
    <string name="tv_new_pswd">新 密 码</string>
    <string name="tv_sure_new_pswd">确认新密码</string>
    <string name="goods_">商品</string>
    <string name="check_">盘点</string>
    <string name="change_">修改</string>
    <string name="setting_">设置</string>
    <string name="out_">退出</string>
    <string name="password_again_2">重复输入密码</string>
    <string name="password_input">输入密码</string>
    <string name="old_password">输入当前密码</string>
    <string name="new_password">输入新密码</string>
    <string name="new_password_again">重复输入密码</string>
    <string name="input_username">输入用户名</string>
</resources>