<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.speedata.xu.myapplication.fragment.ReviseFragment">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="15sp"
            android:text="@string/tv_user_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/revise_username_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/admin_"
            android:gravity="end"
            android:textColor="#000000"
            android:textSize="15sp"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/tv_old_pswd"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:minHeight="30dp"
            android:id="@+id/revise_oldpassword_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/old_password"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="#FFEC8B"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/tv_new_pswd"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:minHeight="30dp"
            android:id="@+id/revise_newpassword_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/new_password"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="#FFEC8B"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="#000000"
            android:textSize="15sp"
            android:text="@string/tv_sure_new_pswd"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            />
        <EditText
            android:minHeight="30dp"
            android:id="@+id/revise_confirmpassword_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:hint="@string/new_password_again"
            android:textColor="#000000"
            android:textSize="20sp"
            android:background="#FFEC8B"
            />
    </LinearLayout>
    <Button

        android:id="@+id/revise_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_update"
        android:textSize="20sp"
        android:padding="15dp"
        android:background="#7CCD7C"
        />
    <Button
        android:id="@+id/revise_back_btn"
        android:layout_width="match_parent"
        android:background="#7CCD7C"
        android:text="@string/btn_return"
        android:padding="15dp"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" />



</LinearLayout>
</FrameLayout>