<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:descendantFocusability= "blocksDescendants"
    >


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/check_time_tv"
                android:text="@string/tv_time"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/check_delete_tv"
                android:text="@string/tv_detele"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:background="#FF3030"
                android:textSize="25sp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:focusable = "false"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/check_name_tv"
            android:textColor="#000000"
            android:text="@string/tv_goods_name"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/check_num_tv"
                android:text="@string/_000000000000"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"/>
            <TextView
                android:id="@+id/check_price_tv"
                android:text="@string/_10"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/check_sub_tv"
                android:text="@string/tv_sub_jian"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:background="#000000"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.7"
                android:focusable = "false"
                />
            <TextView
                android:id="@+id/check_sum_tv"
                android:text="@string/_1"
                android:textAlignment="center"
                android:textSize="25sp"
                android:layout_width="0dp"
                android:layout_weight="0.8"
                android:layout_height="wrap_content"

                />
            <TextView
                android:id="@+id/check_add_tv"
                android:text="@string/tv_add_jia"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:background="#000000"
                android:textSize="30sp"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="0.7"
                android:focusable = "false"
                />
        </LinearLayout>


</LinearLayout>
